[project]
name = "buoyo"
version = "0.1.0"
description = "Talk to your Twitter/X bookmarks with AI-powered semantic search and image analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "requests>=2.32.3",
    "flask>=3.0.0",
    "scikit-learn>=1.3.0",
]
